--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "latch",
   "description": "A testing language for constraint environments",
   "version": "0.0.1",
+  "type": "commonjs",
   "scripts": {
+    "clean": "rm -rf dist",
+    "build": "npm run clean && npm run build:cjs",
+    "build:cjs": "tsc --project tsconfig.build.json --module commonjs --outDir dist/cjs && npx convert-extension cjs dist/cjs/ && rm -f dist/cjs/*.map",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run gen-examples",
     "test": "npm run debugtest && npm run primtest",
     "debugtest": "WABT='WABT/build' npx mocha --exit --reporter src/framework/MochaReporter.ts --require ts-node/register --ui bdd ./src/test/suite/debugger.test.ts",
     "spectest": "WABT='WABT/build' CORESUITE='core/' npx mocha --exit --reporter src/framework/MochaReporter.ts --require ts-node/register --ui bdd ./src/suite/spec.test.ts",
@@ -16,9 +19,12 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
+    "@types/uuid": "^9.0.0",
+    "@types/ws": "^8.5.4",
     "chai": "^4.3.6",
+    "convert-extension": "^0.3.0",
     "ieee754": "^1.2.1",
-    "mocha": "^9.2.1",
+    "mocha": "10.1.0",
     "mqtt": "^4.3.7",
     "serialport": "^10.4.0",
     "ts-node": "^10.5.0",
