--- a/package.json
+++ b/package.json
@@ -23,20 +23,21 @@
     "watch": "tsc -watch -p ./",
     "lint": "eslint src --ext ts"
   },
+  "dependencies": {
+    "chai": "^4.3.6",
+    "ieee754": "^1.2.1",
+    "mocha": "10.1.0",
+    "ts-node": "^10.5.0"
+  },
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
     "@types/uuid": "^9.0.0",
     "@types/ws": "^8.5.4",
-    "chai": "^4.3.6",
     "convert-extension": "^0.3.0",
-    "ieee754": "^1.2.1",
-    "mocha": "10.1.0",
     "mqtt": "^4.3.7",
     "serialport": "^10.4.0",
-    "ts-node": "^10.5.0",
-    "ts-retry-promise": "^0.7.0",
     "typescript": "^4.5.5"
   }
 }
