--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai": "^4.3.6",
     "ieee754": "^1.2.1",
     "mocha": "10.1.0",
+    "source-map": "^0.7.4",
     "ts-node": "^10.5.0"
   },
   "devDependencies": {
