--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     ],
     "rootDir": ".",
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "WABT"
