--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
-    "@types/node": "14.x",
+    "@types/node": "^14.18.63",
     "@types/uuid": "^9.0.0",
     "@types/ws": "^8.5.4",
     "convert-extension": "^0.3.0",
