--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "chai": "^4.3.6",
     "ieee754": "^1.2.1",
     "mocha": "10.1.0",
+    "source-map": "^0.7.4",
     "ts-node": "^10.5.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
-    "@types/node": "14.x",
+    "@types/node": "^20.10.4",
     "@types/uuid": "^9.0.0",
     "@types/ws": "^8.5.4",
     "convert-extension": "^0.3.0",
