🚑 Hotfix: Revert "Use esm with mocha" 6e68705
Mocha custom reporter still does not support ES Modules.
As long as we use mocha, we cannot have top-level awaits, such as the one in `module.ts`. see #7

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "latch",
   "description": "A testing language for constraint environments",
   "version": "0.0.1",
-  "type": "module",
+  "type": "commonjs",
   "exports": {
     "types": "./dist/types/index.d.ts",
     "require": "./dist/cjs/index.cjs"
