--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "build:cjs": "tsc --project tsconfig.build.json --module commonjs --outDir dist/cjs && npx convert-extension cjs dist/cjs/ && rm -f dist/cjs/*.map",
     "watch": "tsc -watch -p ./",
     "lint": "eslint src --ext ts",
-    "test": "npx latch test/test.ts"
+    "test": "npx ts-node test/test.ts"
   },
   "dependencies": {
-    "chai": "^4.3.6",
+    "@types/deep-equal": "^1.0.4",
+    "deep-equal": "^2.2.3",
     "ieee754": "^1.2.1",
-    "mocha": "10.1.0",
     "source-map": "^0.7.4",
     "ts-node": "^10.5.0"
   },
