--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@types/deep-equal": "^1.0.4",
-    "chalk": "^4.1.2",
+    "ansi-colors": "^4.1.3",
     "deep-equal": "^2.2.3",
     "ieee754": "^1.2.1",
     "source-map": "^0.7.4",
