--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "build:cjs": "tsc --project tsconfig.build.json --module commonjs --outDir dist/cjs && npx convert-extension cjs dist/cjs/ && rm -f dist/cjs/*.map",
     "watch": "tsc -watch -p ./",
     "lint": "eslint src --ext ts",
-    "test": "npx ts-node test/test.ts"
+    "test": "npx ts-node test/test.ts",
+    "debugtest": "npx ts-node test/debugger.test.ts",
+    "spectest": "npx ts-node test/spec.ts"
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
     "ieee754": "^1.2.1",
+    "ora": "^8.0.1",
     "source-map": "^0.7.4",
     "ts-node": "^10.5.0"
   },
