👷 Autotrigger releaser workflow

--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -1,13 +1,8 @@
 name: Publish new release
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Release version'
-        required: true
-        default: 'latest'
-        type: string
+  release:
+    types: [published]
 
 permissions: write-all
 
@@ -26,7 +21,7 @@ jobs:
         run: |
           sed -i 's/"version": "[^"]*"/"version": "${{ env.VERSION }}"/' package.json
         env:
-          VERSION: ${{ inputs.version }}
+          VERSION: ${{ github.GITHUB_REF#v }}
 
       # clone warduino
       - uses: actions/checkout@v4
@@ -50,7 +45,7 @@ jobs:
           sed -i "s|\"latch\": \"file:./latch-[^\"]*\"|\"latch\": \"file:./latch-$VERSION.tgz\"|" package.json
         working-directory: 'warduino'
         env:
-          VERSION: ${{ inputs.version }}
+          VERSION: ${{ github.GITHUB_REF#v }}
 
       # commit
       - name: Push changes
@@ -63,7 +58,7 @@ jobs:
           git push --set-upstream origin bump/latch-$VERSION
         working-directory: 'warduino'
         env:
-          VERSION: ${{ inputs.version }}
+          VERSION: ${{ github.GITHUB_REF#v }}
 
       # create pull request
       - name: Create Pull Request
@@ -71,6 +66,6 @@ jobs:
           gh pr create --title "⬆️ Bump latch to $VERSION" --body "Bumping latch to \`$VERSION\`" --base main --head bump/latch-$VERSION --label dependencies
         working-directory: 'warduino'
         env:
-          VERSION: ${{ inputs.version }}
+          VERSION: ${{ github.GITHUB_REF#v }}
           GH_TOKEN: ${{ secrets.WARDUINO_LATCH }}
 
