--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
         "lint": "eslint src/**/* --config .eslint.config.mjs",
         "test:all": "npx ts-node tests/test.ts && npm run test:ava",
         "test:ava": "ava",
-        "debugtest": "npx ts-node tests/debugger.test.ts",
-        "spectest": "npx ts-node tests/spec.ts"
+        "test:coverage": "c8 --src src/ --all ava"
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
@@ -34,6 +33,7 @@
     "devDependencies": {
         "@eslint/js": "^9.16.0",
         "@stylistic/eslint-plugin-js": "^2.11.0",
+        "@ava/typescript": "^5.0.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.1.0",
         "@types/node": "^20.10.4",
@@ -41,21 +41,24 @@
         "@types/ws": "^8.5.4",
         "@typescript-eslint/eslint-plugin": "^8.17.0",
         "ava": "^6.2.0",
-        "@ava/typescript": "^5.0.0",
+        "c8": "^10.1.2",
         "convert-extension": "^0.3.0",
         "eslint": "^9.16.0",
         "globals": "^15.13.0",
         "mqtt": "^4.3.7",
         "serialport": "^10.4.0",
-        "typescript": "^4.5.5",
+        "typescript": "^5.2.0",
         "typescript-eslint": "^8.17.0"
     },
     "ava": {
         "files": [
-            "tests/unit.ts"
+            "out/tests/unit.js"
         ],
-        "extensions": [
-            "ts"
-        ]
+        "typescript": {
+            "compile": "tsc",
+            "rewritePaths": {
+                "source/": "dist/"
+            }
+        }
     }
 }
