--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
     "target": "ES2020",
     "outDir": "out",
     "lib": [
@@ -13,6 +14,7 @@
     "resolveJsonModule": true
   },
   "exclude": [
+    "example",
     "WABT"
   ]
 }
