--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "rootDir": ".",
     "sourceMap": true,
     "strict": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   },
   "exclude": [
     "WABT"
