--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "build": "npm run clean && npm run build:cjs",
         "build:cjs": "tsc --project tsconfig.build.json --module commonjs --outDir dist/cjs && npx convert-extension cjs dist/cjs/ && rm -f dist/cjs/*.map",
         "watch": "tsc -watch -p ./",
-        "lint": "eslint src --ext ts",
+        "lint": "eslint src/**/* --config .eslint.config.mjs",
         "test": "npx ts-node test/test.ts",
         "debugtest": "npx ts-node test/debugger.test.ts",
         "spectest": "npx ts-node test/spec.ts"
@@ -31,14 +31,20 @@
         "ts-node": "^10.5.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.16.0",
+        "@stylistic/eslint-plugin-js": "^2.11.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.1.0",
         "@types/node": "^20.10.4",
         "@types/uuid": "^9.0.0",
         "@types/ws": "^8.5.4",
+        "@typescript-eslint/eslint-plugin": "^8.17.0",
         "convert-extension": "^0.3.0",
+        "eslint": "^9.16.0",
+        "globals": "^15.13.0",
         "mqtt": "^4.3.7",
         "serialport": "^10.4.0",
-        "typescript": "^4.5.5"
+        "typescript": "^4.5.5",
+        "typescript-eslint": "^8.17.0"
     }
 }
