--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
 
       - run: npm i
 
+      - name: Prebuild files
+        run: npm run test:prebuild
+
       - name: Run ava unit tests
         run: npm run test:ava
 
