--- a/.c8rc
+++ b/.c8rc
@@ -2,5 +2,10 @@
   "reporter": [
     "json",
     "text"
-  ]
+  ],
+  "extension": [
+      ".ts"
+  ],
+  "sourceMap": true,
+  "exclude-after-remap": true
 }
