--- a/package.json
+++ b/package.json
@@ -15,26 +15,27 @@
     ],
     "scripts": {
         "clean": "rm -rf dist",
-        "build": "npm run clean && npm run build:cjs",
-        "build:cjs": "tsc --project tsconfig.build.json --module commonjs --outDir dist/cjs && npx convert-extension cjs dist/cjs/ && rm -f dist/cjs/*.map",
+        "build": "npm run build:cjs",
+        "build:cjs": "tsc --project tsconfig.build.json",
         "watch": "tsc -watch -p ./",
         "lint": "eslint src/**/* --config .eslint.config.mjs",
-        "test:prebuild": "npm run build && npx tsc tests/unit/* --outDir out",
+        "test:prebuild": "npm run build && npx tsc tests/unit/* --outDir out --sourceMap",
         "test:all": "npm run test:prebuild && npm run test:ava",
         "test:ava": "ava",
-        "test:coverage": "c8 --src src/ --all ava"
+        "coverage:test:ava": "c8 --src src/ --all ava"
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
         "ieee754": "^1.2.1",
         "ora": "^8.0.1",
         "source-map": "^0.7.4",
-        "ts-node": "^10.5.0"
+        "ts-node": "^10.5.0",
+        "tslib": "^2.8.1"
     },
     "devDependencies": {
+        "@ava/typescript": "^5.0.0",
         "@eslint/js": "^9.16.0",
         "@stylistic/eslint-plugin-js": "^2.11.0",
-        "@ava/typescript": "^5.0.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.1.0",
         "@types/node": "^20.10.4",
@@ -53,12 +54,12 @@
     },
     "ava": {
         "files": [
-            "out/tests/unit/interface.js"
+            "out/tests/unit/util.test.js"
         ],
         "typescript": {
-            "compile": "tsc",
+            "compile": false,
             "rewritePaths": {
-                "source/": "dist/"
+                "src/": "dist/"
             }
         }
     }
