--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,10 +1,14 @@
 {
-  "extends": "./tsconfig.json",
-  "include": ["src"],
-  "compilerOptions": {
-    "rootDir": "src",
-    "noEmit": false,
-    "declaration": true,
-    "declarationDir": "dist/types"
-  }
+    "extends": "./tsconfig.json",
+    "include": [
+        "src"
+    ],
+    "compilerOptions": {
+        "rootDir": "src",
+        "sourceMap": true,
+        "noEmit": false,
+        "declaration": true,
+        "declarationDir": "dist/types",
+        "incremental": true
+    }
 }
