--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "target": "ES2020",
-        "outDir": "out",
+        "module": "CommonJS",
+        "moduleResolution": "Node",
+        "target": "ES2021",
+        "outDir": "dist",
         "lib": [
             "ES2020"
         ],
@@ -11,9 +11,14 @@
         "sourceMap": true,
         "strict": true,
         "allowSyntheticDefaultImports": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "importHelpers": true,
+        "allowJs": true
     },
     "exclude": [
-        "WABT"
+        "WABT",
+        "node_modules",
+        "dist",
+        "tests/examples"
     ]
 }
