Add unit testing (#28)
* Init ava unit testing

* 👷 Run unit tests in CI

* Add CI status badge to README

* Add c8 code coverage

* Fix prebuilding of test files

* Fix c8 coverage and cleanup config

* 👷 Add coverage to CI

--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,17 @@ lib/*.js
 test/*.js
 *.map
 
+# Project specific
 WABT
 core/
 
 dist/
 
+# IDE folders
 .idea
+
+# built ava test files
+out
+
+# c8 Coverage
+coverage
