--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,24 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2020",
-    "outDir": "out",
-    "lib": [
-      "ES2020"
-    ],
-    "rootDir": ".",
-    "sourceMap": true,
-    "strict": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
-  },
-  "exclude": [
-    "WABT"
-  ]
+    "compilerOptions": {
+        "module": "CommonJS",
+        "moduleResolution": "Node",
+        "target": "ES2021",
+        "outDir": "dist",
+        "lib": [
+            "ES2020"
+        ],
+        "rootDir": ".",
+        "sourceMap": true,
+        "strict": true,
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true,
+        "importHelpers": true,
+        "allowJs": true
+    },
+    "exclude": [
+        "WABT",
+        "node_modules",
+        "dist",
+        "tests/examples"
+    ]
 }
