--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
         "clean": "rm -rf dist",
         "build": "npm run build:cjs",
         "build:cjs": "tsc --project tsconfig.build.json",
+        "build:tests": "tsc --outDir out --project tsconfig.tests.json",
         "watch": "tsc -watch -p ./",
         "lint": "eslint src/**/* --config .eslint.config.mjs",
-        "test:prebuild": "npm run build && npx tsc tests/unit/* --outDir out --sourceMap",
+        "test:prebuild": "npm run build && npm run build:tests",
         "test:all": "npm run test:prebuild && npm run test:ava",
         "test:ava": "ava",
         "coverage:test:ava": "c8 --src src/ --all ava"
