Add sourcemap tests

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     },
     "ava": {
         "files": [
-            "out/tests/unit/util.test.js"
+            "out/tests/unit/util.test.js",
+            "out/tests/unit/sourcemap.test.js"
         ],
         "typescript": {
             "compile": false,
