--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,45 @@ name: Tests
 on: [ push ]
 
 jobs:
+  build:
+    name: Build WAT tools
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Get WABT commit ID
+        working-directory: tests/unit/artifacts/wabt
+        run: echo "WABT_VERSION=$(git rev-parse HEAD)" >> $GITHUB_ENV
+
+      - name: Cache wabt
+        uses: actions/cache@v4
+        id: cache-wabt
+        with:
+          key: ${{ runner.os }}-wabt-${{ env.WABT_VERSION }}
+          path: tests/unit/artifacts/wabt
+          restore-keys: |
+            ${{ runner.os }}-wabt-
+
+      - name: Build WABT  # Build latest version
+        if: steps.cache-wabt.outputs.cache-hit == false
+        working-directory: tests/unit/artifacts/wabt
+        run: |
+          mkdir build; cd build
+          cmake ..
+          cmake --build .
+
+      - name: Upload built tools
+        uses: actions/upload-artifact@v4
+        with:
+          name: wabt-build-${{ github.run_id }}
+          path: tests/unit/artifacts/wabt/build
+
   unit:
     name: Unit tests
     runs-on: ubuntu-latest
+    needs: build
     strategy:
       fail-fast: false
     if: github.event.pull_request.draft == false
@@ -16,12 +52,27 @@ jobs:
       - name: Prebuild files
         run: npm run test:prebuild
 
+      - name: Download WAT tools
+        uses: actions/download-artifact@v4
+        with:
+          name: wabt-build-${{ github.run_id }}
+          path: .tools
+
+      - name: Verify tools
+        run: |
+          chmod u+x $GITHUB_WORKSPACE/.tools/*
+          $GITHUB_WORKSPACE/.tools/wasm-objdump --version
+
+      - name: Add .tools to PATH
+        run: echo "$GITHUB_WORKSPACE/.tools" >> $GITHUB_PATH
+
       - name: Run ava unit tests
         run: npm run test:ava
 
   coverage:
     name: Code coverage
     runs-on: ubuntu-latest
+    needs: build
     strategy:
       fail-fast: true
     if: github.event.pull_request.draft == false
@@ -32,6 +83,20 @@ jobs:
 
       - name: Prebuild files
         run: npm run test:prebuild
+
+      - name: Download WAT tools
+        uses: actions/download-artifact@v4
+        with:
+          name: wabt-build-${{ github.run_id }}
+          path: .tools
+
+      - name: Verify tools
+        run: |
+          chmod u+x $GITHUB_WORKSPACE/.tools/*
+          $GITHUB_WORKSPACE/.tools/wasm-objdump --version
+
+      - name: Add .tools to PATH
+        run: echo "$GITHUB_WORKSPACE/.tools" >> $GITHUB_PATH
 
       - name: Run c8 coverage
         run: |
