--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "WABT"]
 	path = WABT
 	url = git@github.com:TOPLLab/wabt.git
+[submodule "tests/unit/artifacts/wabt"]
+	path = tests/unit/artifacts/wabt
+	url = git@github.com:TOPLLab/wabt.git
