--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "test:prebuild": "npm run build && npm run build:tests",
         "test:all": "npm run test:prebuild && npm run test:ava",
         "test:ava": "ava",
+        "test:example": "npx ts-node ./tests/examples/example.ts",
         "coverage:test:ava": "c8 --src src/ --all ava"
     },
     "dependencies": {
