--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tests/unit/artifacts/wabt"]
 	path = tests/unit/artifacts/wabt
 	url = git@github.com:TOPLLab/wabt.git
+[submodule "tests/unit/artifacts/warduino"]
+	path = tests/unit/artifacts/warduino
+	url = git@github.com:TOPLLab/WARDuino.git
