--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,10 @@
         "allowJs": true
     },
     "exclude": [
-        "WABT",
+        "wabt",
         "node_modules",
         "dist",
-        "tests/examples"
+        "tests/examples",
+        "warduino"
     ]
 }
