--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,80 @@ name: Tests
 on: [ push ]
 
 jobs:
+  build-wabt:
+    name: Build WAT tools
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Get WABT commit ID
+        working-directory: tests/artifacts/wabt
+        run: echo "WABT_VERSION=$(git rev-parse HEAD)" >> $GITHUB_ENV
+
+      - name: Cache wabt
+        uses: actions/cache@v4
+        id: cache-wabt
+        with:
+          key: ${{ runner.os }}-wabt-${{ env.WABT_VERSION }}
+          path: tests/artifacts/wabt
+          restore-keys: |
+            ${{ runner.os }}-wabt-
+
+      - name: Build WABT  # Build latest version
+        if: steps.cache-wabt.outputs.cache-hit == false
+        working-directory: tests/artifacts/wabt
+        run: |
+          mkdir build; cd build
+          cmake ..
+          cmake --build .
+
+      - name: Upload built tools
+        uses: actions/upload-artifact@v4
+        with:
+          name: wabt-build-${{ github.run_id }}
+          path: tests/artifacts/wabt/build
+
+  build-wdcli:
+    name: Build WARDuino CLI
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Get WDCLI commit ID
+        working-directory: tests/artifacts/warduino
+        run: echo "WDCLI_VERSION=$(git rev-parse HEAD)" >> $GITHUB_ENV
+
+      - name: Cache WARDuino CLI
+        uses: actions/cache@v4
+        id: cache-warduino
+        with:
+          key: ${{ runner.os }}-warduino-${{ env.WDCLI_VERSION }}
+          path: tests/artifacts/warduino
+          restore-keys: |
+            ${{ runner.os }}-warduino-
+
+      - name: Build WARDuino CLI  # Build latest version
+        if: steps.cache-warduino.outputs.cache-hit == false
+        working-directory: tests/artifacts/warduino
+        run: |
+          mkdir build; cd build
+          cmake .. -D BUILD_EMULATOR=ON
+          cmake --build .
+
+      - name: Upload built tools
+        uses: actions/upload-artifact@v4
+        with:
+          name: warduino-build-${{ github.run_id }}
+          path: tests/artifacts/warduino/build
+
   unit:
     name: Unit tests
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
+    needs: build-wabt
     if: github.event.pull_request.draft == false
     steps:
       - uses: actions/checkout@v4
@@ -16,14 +85,26 @@ jobs:
       - name: Prebuild files
         run: npm run test:prebuild
 
+      - name: Download WAT tools
+        uses: actions/download-artifact@v4
+        with:
+          name: wabt-build-${{ github.run_id }}
+          path: .tools
+
+      - name: Verify tools
+        run: |
+          chmod u+x $GITHUB_WORKSPACE/.tools/*
+          $GITHUB_WORKSPACE/.tools/wasm-objdump --version
+
       - name: Run ava unit tests
         run: npm run test:ava
+        env:
+          WABT: ${GITHUB_WORKSPACE}/.tools
 
   coverage:
     name: Code coverage
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
+    needs: build-wabt
     if: github.event.pull_request.draft == false
     steps:
       - uses: actions/checkout@v4
@@ -33,9 +114,26 @@ jobs:
       - name: Prebuild files
         run: npm run test:prebuild
 
+      - name: Download WAT tools
+        uses: actions/download-artifact@v4
+        with:
+          name: wabt-build-${{ github.run_id }}
+          path: .tools
+
+      - name: Verify tools
+        run: |
+          chmod u+x $GITHUB_WORKSPACE/.tools/*
+          $GITHUB_WORKSPACE/.tools/wasm-objdump --version
+
+      - name: Add .tools to PATH
+        run: echo "$GITHUB_WORKSPACE/.tools" >> $GITHUB_PATH
+
       - name: Run c8 coverage
         run: |
-          echo "LINE_COVERAGE=$(npm run coverage:test:ava | grep -E '^\s*Lines\s*:\s*[0-9]+(\.[0-9]+)?%' | awk '{print $3}' | tr -d '%')" >> $GITHUB_ENV
+          echo "LINE_COVERAGE=$(npm run coverage:test:ava | grep -E 'Lines\s*:\s*[0-9]+(\.[0-9]+)?%' | awk '{print $3}' | tr -d '%')" >> $GITHUB_ENV
+
+      - name: Report coverage
+        run: npx c8 report --all
 
       - name: Update coverage badge
         uses: schneegans/dynamic-badges-action@v1.7.0
