--- a/package.json
+++ b/package.json
@@ -1,68 +1,71 @@
 {
-    "name": "latch",
-    "description": "A testing language for constraint environments",
-    "version": "0.3.1",
-    "type": "commonjs",
-    "exports": {
-        "types": "./dist/types/index.d.ts",
-        "require": "./dist/cjs/index.cjs"
-    },
-    "main": "dist/cjs/index.cjs",
-    "types": "dist/types/index.d.ts",
+  "name": "latch",
+  "description": "A testing language for constraint environments",
+  "version": "0.3.1",
+  "type": "commonjs",
+  "exports": {
+    "types": "./dist/types/index.d.ts",
+    "require": "./dist/cjs/index.cjs"
+  },
+  "main": "dist/cjs/index.cjs",
+  "types": "dist/types/index.d.ts",
+  "files": [
+    "dist",
+    "bin"
+  ],
+  "scripts": {
+    "clean": "rm -rf dist",
+    "build": "npm run build:cjs",
+    "build:cjs": "tsc --project tsconfig.build.json",
+    "build:tests": "tsc --outDir out --project tsconfig.tests.json",
+    "watch": "tsc -watch -p ./",
+    "lint": "eslint src/**/* --config .eslint.config.mjs",
+    "test:prebuild": "npm run build && npm run build:tests",
+    "test:all": "npm run test:prebuild && npm run test:ava",
+    "test:ava": "ava",
+    "test:example": "npx ts-node ./tests/examples/example.ts",
+    "coverage:test:ava": "c8 --src src/ --all ava"
+  },
+  "dependencies": {
+    "ansi-colors": "^4.1.3",
+    "ieee754": "^1.2.1",
+    "ora": "^8.0.1",
+    "source-map": "^0.7.4",
+    "ts-node": "^10.5.0",
+    "tslib": "^2.8.1"
+  },
+  "devDependencies": {
+    "@ava/typescript": "^5.0.0",
+    "@eslint/js": "^9.16.0",
+    "@stylistic/eslint-plugin-js": "^2.11.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^20.10.4",
+    "@types/uuid": "^9.0.0",
+    "@types/ws": "^8.5.4",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "ava": "^6.2.0",
+    "c8": "^10.1.2",
+    "convert-extension": "^0.3.0",
+    "eslint": "^9.16.0",
+    "globals": "^15.13.0",
+    "mqtt": "^4.3.7",
+    "serialport": "^10.4.0",
+    "typescript": "^5.2.0",
+    "typescript-eslint": "^8.17.0"
+  },
+  "ava": {
     "files": [
-        "dist",
-        "bin"
+      "out/tests/unit/describers.test.js",
+      "out/tests/unit/messaging.test.js",
+      "out/tests/unit/sourcemap.test.js",
+      "out/tests/unit/util.test.js"
     ],
-    "scripts": {
-        "clean": "rm -rf dist",
-        "build": "npm run build:cjs",
-        "build:cjs": "tsc --project tsconfig.build.json",
-        "build:tests": "tsc --outDir out --project tsconfig.tests.json",
-        "watch": "tsc -watch -p ./",
-        "lint": "eslint src/**/* --config .eslint.config.mjs",
-        "test:prebuild": "npm run build && npm run build:tests",
-        "test:all": "npm run test:prebuild && npm run test:ava",
-        "test:ava": "ava",
-        "test:example": "npx ts-node ./tests/examples/example.ts",
-        "coverage:test:ava": "c8 --src src/ --all ava"
-    },
-    "dependencies": {
-        "ansi-colors": "^4.1.3",
-        "ieee754": "^1.2.1",
-        "ora": "^8.0.1",
-        "source-map": "^0.7.4",
-        "ts-node": "^10.5.0",
-        "tslib": "^2.8.1"
-    },
-    "devDependencies": {
-        "@ava/typescript": "^5.0.0",
-        "@eslint/js": "^9.16.0",
-        "@stylistic/eslint-plugin-js": "^2.11.0",
-        "@types/chai": "^4.3.0",
-        "@types/mocha": "^9.1.0",
-        "@types/node": "^20.10.4",
-        "@types/uuid": "^9.0.0",
-        "@types/ws": "^8.5.4",
-        "@typescript-eslint/eslint-plugin": "^8.17.0",
-        "ava": "^6.2.0",
-        "c8": "^10.1.2",
-        "convert-extension": "^0.3.0",
-        "eslint": "^9.16.0",
-        "globals": "^15.13.0",
-        "mqtt": "^4.3.7",
-        "serialport": "^10.4.0",
-        "typescript": "^5.2.0",
-        "typescript-eslint": "^8.17.0"
-    },
-    "ava": {
-        "files": [
-            "out/tests/unit/util.test.js"
-        ],
-        "typescript": {
-            "compile": false,
-            "rewritePaths": {
-                "src/": "dist/"
-            }
-        }
+    "typescript": {
+      "compile": false,
+      "rewritePaths": {
+        "src/": "dist/"
+      }
     }
+  }
 }
