--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "commonjs",
   "exports": {
     "types": "./dist/types/index.d.ts",
-    "require": "./dist/cjs/index.cjs"
+    "require": "./dist/cjs/index.js"
   },
-  "main": "dist/cjs/index.cjs",
+  "main": "dist/cjs/index.js",
   "types": "dist/types/index.d.ts",
   "files": [
     "dist",
