--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "coverage:test:ava": "c8 --src src/ --all ava"
   },
   "dependencies": {
+    "@thi.ng/leb128": "^3.1.75",
     "ansi-colors": "^4.1.3",
     "ieee754": "^1.2.1",
     "ora": "^8.0.1",
@@ -34,7 +35,7 @@
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@ava/typescript": "^5.0.0",
+    "@ava/typescript": "^6.0.0",
     "@eslint/js": "^9.16.0",
     "@stylistic/eslint-plugin-js": "^2.11.0",
     "@types/chai": "^4.3.0",
